// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reports expect to render emptystate 1`] = `
<StateViewWithError
  stateValues={
    Object {
      "data": Object {
        "profiles": Object {
          "edges": Array [],
        },
      },
      "error": undefined,
      "loading": undefined,
    }
  }
>
  <StateViewPart
    stateKey="loading"
  >
    <ReportsHeader />
    <Connect(InternalMain)>
      <SkeletonTable
        canSelectAll={false}
        colSize={3}
        hasRadio={false}
        isDark={false}
        isSelectable={false}
        paddingColumnSize={0}
        rowSize={10}
        variant={null}
      />
    </Connect(InternalMain)>
  </StateViewPart>
  <StateViewPart
    stateKey="data"
  >
    <ReportsHeader />
    <Connect(InternalMain)>
      <ReportsEmptyState />
    </Connect(InternalMain)>
  </StateViewPart>
</StateViewWithError>
`;

exports[`Reports expect to render loading 1`] = `
<StateViewWithError
  stateValues={
    Object {
      "data": undefined,
      "error": false,
      "loading": true,
    }
  }
>
  <StateViewPart
    stateKey="loading"
  >
    <ReportsHeader />
    <Connect(InternalMain)>
      <SkeletonTable
        canSelectAll={false}
        colSize={3}
        hasRadio={false}
        isDark={false}
        isSelectable={false}
        paddingColumnSize={0}
        rowSize={10}
        variant={null}
      />
    </Connect(InternalMain)>
  </StateViewPart>
  <StateViewPart
    stateKey="data"
  >
    <ReportsHeader />
    <Connect(InternalMain)>
      <ReportsEmptyState />
    </Connect(InternalMain)>
  </StateViewPart>
</StateViewWithError>
`;

exports[`Reports expect to render without error 1`] = `
<StateViewWithError
  stateValues={
    Object {
      "data": Object {
        "profiles": Object {
          "edges": Array [
            Object {
              "node": Object {
                "businessObjective": Object {
                  "id": "1",
                  "title": "BO 1",
                },
                "complianceThreshold": 1,
                "compliantHostCount": 1,
                "description": "profile description",
                "id": "1",
                "name": "profile1",
                "refId": "121212",
                "testResultHostCount": 1,
              },
            },
          ],
        },
      },
      "error": undefined,
      "loading": undefined,
    }
  }
>
  <StateViewPart
    stateKey="loading"
  >
    <ReportsHeader />
    <Connect(InternalMain)>
      <SkeletonTable
        canSelectAll={false}
        colSize={3}
        hasRadio={false}
        isDark={false}
        isSelectable={false}
        paddingColumnSize={0}
        rowSize={10}
        variant={null}
      />
    </Connect(InternalMain)>
  </StateViewPart>
  <StateViewPart
    stateKey="data"
  >
    <ReportsHeader />
    <Connect(InternalMain)>
      <ReportsTable
        profiles={
          Array [
            Object {
              "businessObjective": Object {
                "id": "1",
                "title": "BO 1",
              },
              "complianceThreshold": 1,
              "compliantHostCount": 1,
              "description": "profile description",
              "id": "1",
              "name": "profile1",
              "refId": "121212",
              "testResultHostCount": 1,
            },
          ]
        }
      />
    </Connect(InternalMain)>
  </StateViewPart>
</StateViewWithError>
`;
